# text-to-sql

./: README.md  prompts.jsonl  pyproject.toml  requirements.txt
data/: UserInput_SQLQueries.csv  text-to-sql-data.txt  text-to-sql-db.sql  text-to-sql-scripts.sql
knowledge/: user_preference.txt
src/: app.py  app_v0.py  crew.py  logger.py  stream.py
src/tools/: custom_tool.py
