[project]
name = "text_to_sql"
version = "0.1.0"
description = "text-to-sql using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
text_to_sql = "text_to_sql.main:run"
run_crew = "text_to_sql.main:run"
train = "text_to_sql.main:train"
replay = "text_to_sql.main:replay"
test = "text_to_sql.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
